feat(Dtos flow of data): :zap: creacion dtos
manejo de data que se distriuye en la api

versionado de apis y rate limiter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "base con migraciones definidas",
         "web api base",
         "ApiMethods"
-    ]
+    ],
+    "dotnet.defaultSolution": "insidences-C.sln"
 }
