feat(Dtos flow of data): :zap: manejo dtos
flujo dtos

versionado y rate limiter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "conventionalCommits.scopes": [
         "base con migraciones definidas",
         "web api base",
-        "ApiMethods"
+        "ApiMethods",
+        "Dtos flow of data"
     ],
     "dotnet.defaultSolution": "insidences-C.sln"
 }
