feat(autentications): :alien: se implementaron los cambios en el jwt
jwt creado y configurado

cambios de y autenticaciones

--- a/InsidenceAPI/InsidenceAPI.csproj
+++ b/InsidenceAPI/InsidenceAPI.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Aplicacion\Aplicacion.csproj" />
+    <ProjectReference Include="..\Segurity\Segurity.csproj" />
   </ItemGroup>
 
 </Project>
