--- a/InsidenceAPI/appsettings.json
+++ b/InsidenceAPI/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT" : {
+    "Key" : "~@3WvT%!(Tye#r$RTu&*54#@![*&*<?RTa&",
+    "Issuer" : "IncidenceAPI",
+    "Audience" : "IncidenceAPI",
+    "DurationInMinutes" : 20
+  }
 }
