feat(autentications): :zap: cambios y  autenticacion por rol
autenticacion por rol en jwt

se añadio autorizacion con jwt

--- a/InsidenceAPI/appsettings.json
+++ b/InsidenceAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "JWT" : {
-    "Key" : "~@3WvT%!(Tye#r$RTu&*54#@![*&*<?RTa&",
+    "Key" : "rgfZs3pNboV0hbG6Fat",
     "Issuer" : "IncidenceAPI",
     "Audience" : "IncidenceAPI",
     "DurationInMinutes" : 20
