--- a/InsidenceAPI/appsettings.json
+++ b/InsidenceAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "JWT" : {
-    "Key" : "rgfZs3pNboV0hbG6Fat",
+    "Key" : "!#$%&/()=?¡*¨[]_:[]¨*¡?=))(/&%$!#$(/&#$&%#$&%#%=",
     "Issuer" : "IncidenceAPI",
     "Audience" : "IncidenceAPI",
     "DurationInMinutes" : 20
